--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,22 @@
---- #YAML:1.0
-name:               Mac-FSEvents
-version:            0.06
-abstract:           Monitor a directory structure for changes
+---
+abstract: 'Monitor a directory structure for changes'
 author:
-    - Andy Grundman <andy@hybridized.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Andy Grundman <andy@hybridized.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:  {}
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Mac-FSEvents
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  File::Slurp: 0
+version: 0.07
